<resources>
    <string name="app_name">Sebastian Bruliński CV</string>
    <string name="start">Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Witam</string>
    <string name="pdf_version">Wersja PDF</string>
    <string name="electronic_version">Wersja elektroniczna</string>
    <string name="next">Dalej</string>
    <string name="personal_details">Personalia</string>
    <string name="career">Kariera</string>
    <string name="year">lat</string>
    <string name="years">lata</string>
    <string name="print_version">WERSJA DO DRUKU</string>
    <string name="phone_version">PRZEGLĄDAJ</string>
    <string name="refresh">Odśwież</string>
    <string name="refreshing">Odświeżanie</string>
    <string name="preambule">Wstęp</string>
    <string name="languages">Języki</string>
    <string name="data_fetching_error">Wystąpił błąd podczas próby pobrania CV. Spróbuj ponownie za chwilę.</string>
    <string name="fetch_graphics_durng_refreshing">Pobierz grafiki przy odświeżaniu</string>
    <string name="fetching_cv">Pobieranie CV</string>
    <string name="skills">Umiejętności</string>
    <string name="introduction">Wstęp</string>
    <string name="table_of_contents">Spis treści</string>
    <string name="call">Zadzwoń</string>
    <string name="mail">Email</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="settings">Ustawienia</string>
    <string name="data">Dane</string>
    <string name="email_subject">Oferta pracy</string>
    <string name="call_explanation">Aby wykonać połączenie musisz zezwolić na ich wykonywanie</string>
    <string name="explanation_line_content">Aby wykonywać połączenia musisz na nie najpierw zezwolić.</string>
    <string name="warning">Uwaga</string>
    <string name="empty">Pusto</string>
    <string name="error">Błąd</string>
    <string name="ups">Ups</string>
    <string name="offline">Offline</string>
    <string name="no_connection_message">Brak połączenia z siecią. Spróbuj włączyć dane komórkowe lub WiFi</string>
    <string name="more">WIĘCEJ</string>
    <string name="notifications">Powiadomienia</string>
    <string name="new_cv_notifiction">Powiadom mnie o nowej wersji CV</string>
    <string name="credits">Credits</string>
    <string name="home">Miejsce zamieszkania</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="sign_in">Zaloguj</string>
    <string name="login_screen_message">Proszę o wpisanie danych logowania\nz wiadomości e-mail</string>
    <string name="access_denied">Odmowa dostępu</string>
    <string name="login_successful">Zapraszam</string>
    <string name="sign_out">Wyloguj</string>
    <string name="logout_message">Jesteś pewien, że chcesz się wylogować? Będzie musiał ponownie podać dane logowania</string>
    <string name="no">NIE</string>
    <string name="yes">TAK</string>
    <string name="authorization">Autoryzacja</string>
    <string name="cant_authorize">Nie można zautoryzować</string>
    <string name="explanation_no_email_app">Brak klienta poczty e-mail.</string>
    <string name="explanation_camera">Aby zeskanować kod QR wymagany do logowania musisz pozwolić na dostęp do kamery</string>
    <string name="qr">QR</string>
    <string name="personal_data_processing">Przetwaranie danych osobowych</string>
    <string name="dont_show_again">Nie pokazuj więcej</string>
</resources>
