<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".fragment.LoginFragment">

    <TextView
        app:layout_constraintBottom_toTopOf="@id/emailEditText"
        android:id="@+id/textView5"
        style="@style/LoginScreenTextViewStyle"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/login_screen_message" />

    <Button
        android:id="@+id/loginButton"
        style="@style/LoginButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/LoginScreenEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/LoginScreenEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>